# caffeine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  doc-generator.md  ford-docs.css  fpm.toml  hello.f90  index.html  install.sh  search.html
app/: native-multi-image.F90
cmake/: FindGASNet.cmake
docs/: README-maintainers.md  README-release.md  feature-support.md  implementation-status.md  index.md
example/: Makefile  contrived.f90  double-scalar.f90  hello.F90  hello.f90  main.f90  sum-complex-double-scalar.f90
include/: language-support.F90  macro.F90  version.h
interface/: as_c_ptr.html  as_character.html  as_character_i.html  as_int.html  assert.html  c_bool_operation.html  c_char_operation.html  c_double_complex_operation.html  c_double_operation.html  c_float_complex_operation.html  c_float_operation.html  c_int32_t_operation.html  c_int64_t_operation.html  caf_allocate.html  caf_allocate_remaining.html  caf_as_c_ptr.html  caf_as_int.html  caf_c_caffeinate.html  caf_c_co_broadcast.html  caf_c_co_max.html  caf_c_co_min.html  caf_c_co_reduce.html  caf_c_co_sum.html  caf_c_decaffeinate.html  caf_c_elem_len.html  caf_c_is_f_string.html  caf_c_num_images.html  caf_c_numeric_type.html  caf_c_same_cfi_type.html  caf_c_sync_all.html  caf_c_this_image.html  caf_caffeinate.html  caf_change_team.html  caf_co_broadcast.html  caf_co_max.html  caf_co_min.html  caf_co_reduce.html  caf_co_sum.html  caf_convert_base_addr.html  caf_deallocate.html  (+138 more)
lists/: absint.html  files.html  modules.html  procedures.html  types.html
manifest/: fpm.toml.template
manifests/: linux-fpm.toml-tail
module/: alias_m.html  alias_s.html  allocation_m.html  allocation_s.html  assert_s.html  atomic_m.html  atomic_s.html  caffeinate_decaffeinate_m.html  caffeinate_decaffeinate_s.html  caffeine_assert_m.html  caffeine_assert_s.html  caffeine_characterizable_m.html  caffeine_h_m.html  caffeine_intrinsic_array_m.html  caffeine_intrinsic_array_s.html  caffeine_m.html  co_broadcast_s.html  co_max_s.html  co_min_s.html  co_reduce_s.html  co_sum_s.html  coarray_access_m.html  coarray_access_s.html  coarray_queries_m.html  coarray_queries_s.html  collective_subroutines_m.html  critical_m.html  critical_s.html  events_m.html  events_s.html  image_enumeration_m.html  image_enumeration_s.html  image_queries_m.html  image_queries_s.html  intrinsic_array_s.html  locks_m.html  locks_s.html  normal_termination_m.html  normal_termination_s.html  notify_m.html  (+18 more)
proc/: add_to_team_list.html  as_c_ptr.html  as_character.html  as_int.html  assert.html  assert_init.html  base_pointer.html  c_f_string.html  caf_caffeinate.html  caf_change_team.html  caf_co_broadcast.html  caf_co_max.html  caf_co_min.html  caf_co_reduce.html  caf_co_sum.html  caf_decaffeinate.html  caf_end_team.html  caf_error_stop_character.html  caf_error_stop_integer.html  caf_establish_child_heap.html  caf_form_team.html  caf_have_child_teams.html  caf_stop_character.html  caf_stop_character~2.html  caf_stop_integer.html  caf_stop_integer~2.html  caf_sync_all.html  coarray_handle_check.html  construct.html  f_c_string.html  get_c_ptr.html  get_c_ptr_character.html  get_strided_helper.html  inner_caf_error_stop_character.html  inner_caf_error_stop_integer.html  num_images_team.html  num_images_team_number.html  optional_value.html  prif_alias_create.html  prif_alias_destroy.html  (+121 more)
sourcefile/: alias_m.f90.html  alias_s.f90.html  allocation_m.f90.html  allocation_s.f90.html  assert_m.f90.html  assert_s.f90.html  atomic_m.f90.html  atomic_s.f90.html  caffeinate_decaffeinate_m.f90.html  caffeinate_decaffeinate_s.f90.html  caffeine_assert_s.f90.html  caffeine_h_m.f90.html  caffeine_m.f90.html  characterizable_m.f90.html  co_broadcast_s.f90.html  co_max_s.f90.html  co_min_s.f90.html  co_reduce_s.f90.html  co_sum_s.f90.html  coarray_access_m.f90.html  coarray_access_s.f90.html  coarray_queries_m.f90.html  coarray_queries_s.f90.html  collective_subroutines_m.f90.html  critical_m.f90.html  critical_s.f90.html  events_m.f90.html  events_s.f90.html  image_enumeration_m.f90.html  image_enumeration_s.f90.html  image_queries_m.f90.html  image_queries_s.f90.html  intrinsic_array_m.f90.html  intrinsic_array_s.f90.html  locks_m.f90.html  locks_s.f90.html  normal_termination_m.f90.html  normal_termination_s.f90.html  notify_m.f90.html  notify_s.f90.html  (+17 more)
src/: CMakeLists.txt  alias_s.f90  allocation_m.f90  allocation_s.F90  allocation_s.f90  assert_m.F90  assert_s.f90  atomic_s.f90  caffeine_h_m.f90  caffeine_m.f90  co_broadcast_s.f90  co_max_s.f90  co_min_s.F90  co_min_s.f90  co_reduce_s.F90  co_reduce_s.f90  co_sum_s.f90  coarray_access_m.f90  coarray_access_s.f90  collective_subroutines_m.f90  critical_s.f90  events_m.f90  events_s.F90  events_s.f90  image_enumeration_m.f90  image_queries_s.F90  image_queries_s.f90  intrinsic_array_s.F90  locks_m.f90  locks_s.f90  notify_s.F90  (+18 more)
src/caffeine/: CMakeLists.txt  a.out  alias_m.f90  alias_s.F90  allocation_m.f90  allocation_s.F90  allocation_s.f90  atomic_m.f90  atomic_s.F90  atomic_s.f90  caffeinate_decaffeinate.c  caffeinate_decaffeinate_m.f90  caffeinate_decaffeinate_s.F90  caffeinate_decaffeinate_s.f90  caffeine-internal.h  caffeine.c  caffeine.h  caffeine_assert_s.F90  caffeine_h_m.f90  co_broadcast_s.F90  co_max_s.F90  co_min_s.F90  co_reduce_s.F90  co_sum_s.F90  coarray_access_m.f90  coarray_access_s.F90  coarray_access_s.f90  coarray_queries_m.f90  coarray_queries_s.F90  coarray_queries_s.f90  collective_helpers_m.f90  collective_subroutines_m.f90  collective_subroutines_s.f90  critical_m.f90  critical_s.F90  critical_s.f90  error_termination_m.f90  error_termination_s.f90  events_m.f90  events_s.F90  (+42 more)
src/caffeine/assert/: assert_m.F90  assert_s.f90  characterizable_m.f90  intrinsic_array_m.F90  intrinsic_array_s.F90
src/caffeine/caffeine_assert/: caffeine_assert_m.F90  caffeine_assert_s.f90
src/caffeine/collective_subroutines/: co_broadcast_s.F90  co_broadcast_s.f90  co_max_s.F90  co_max_s.f90  co_min_s.F90  co_min_s.f90  co_reduce_s.F90  co_reduce_s.f90  co_sum_s.F90  co_sum_s.f90
(+136 files in other folders)
